update the graph

--- a/Course_9B_Web_Programming_with_Flask.ipynb
+++ b/Course_9B_Web_Programming_with_Flask.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning for Computer Vision Group 15"
+    "# Web Programming with Flask - Group 15"
    ]
   },
   {
@@ -926,9 +926,9 @@
       "  with pd.option_context('mode.use_inf_as_na', True):\n",
       "C:\\Users\\Osaraku\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
       "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "127.0.0.1 - - [07/Jul/2024 15:47:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Jul/2024 15:47:53] \"GET /static/average_annual_waste.png HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [07/Jul/2024 15:47:53] \"GET /static/total_annual_waste.png HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [07/Jul/2024 15:52:58] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Jul/2024 15:52:58] \"GET /static/average_annual_waste.png HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Jul/2024 15:52:58] \"GET /static/total_annual_waste.png HTTP/1.1\" 200 -\n"
      ]
     }
    ],
